--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head prefix="og: http://ogp.me/ns#">
-    <title>Brittany Chiang | Web Developer &amp; UX Enthusiast</title>
+    <title>Riya Patel | Student</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="brittany chiang, brittany, chiang, bchiang7, northeastern university, northeastern, university, student, front-end, web, website, computer, software, developer, engineer, designer, co-op" />
-    <meta name="author" content="Brittany Chiang" />
+    <meta name="keywords" content="Riya Patel, Riya, Patel, riyapatel135, student, front-end, web, website, computer, software, developer, engineer, designer" />
+    <meta name="author" content="Riya Patel" />
     <meta name="description" content="Web developer, UX Enthusiast, and everything in between." />
     <meta property="og:description" content="Web developer, UX Enthusiast, and everything in between." />
     <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://brittanychiang.com/img/social-image.png" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:title" content="Brittany Chiang's Personal Website" />
+    <meta property="og:title" content="Riya Patel's Personal Website" />
     <meta property="og:url" content="http://brittanychiang.com/" />
     <meta property="og:type" content="website" />
     <link rel="shortcut icon" href="img/logo-transparent-00009C.png">
@@ -40,7 +40,7 @@
                         <i class="fa fa-2x fa-bars"></i>
                     </button>
                     <a class="navbar-brand page-scroll" href="http://brittanychiang.com/">
-                        <img src="img/logo-transparent-white-30pt.png" />Brittany Chiang</a>
+                        <img src="img/logo-transparent-white-30pt.png" />Riya Patel</a>
                 </div>
                 <div class="collapse navbar-collapse navbar-main-collapse">
                     <ul class="nav navbar-nav navbar-right">
@@ -60,9 +60,9 @@
         <section id="intro" class="intro text-center">
             <div class="overlay">
                 <div class="intro-content">
-                    <h1 class="animated fadeInDown delay-05s">Hi, I'm Brittany</strong>
+                    <h1 class="animated fadeInDown delay-05s">Hi, I'm Riya</strong>
                     </h1>
-                    <p class="subtitle animated fadeInUp delay-05s">Web Developer &amp; UX Enthusiast</p>
+                    <p class="subtitle animated fadeInUp delay-05s">Student</p>
                     <a class="fa fa-angle-down page-scroll" href="#about"></a>
                 </div>
             </div>
@@ -76,10 +76,10 @@
                             <h2>A Little Bit About Me</h2>
                             <img src="img/headshot1-square4.jpg" id="prof-pic" />
                             <p>
-                                Hey! My name is Brittany and I'm a web developer with a passion for front end development and design. I'm currently a third year student at
-                                <a href="http://www.northeastern.edu/" target="_blank">Northeastern University</a> pursuing a degree in <a href="http://www.ccs.neu.edu/undergraduate/degree-programs/information-science-bachelor-of-science/" target="_blank">information science</a> with a minor in interaction design. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.
+                                Hey! My name is Riya and I'm a web developer with a passion for front end development and design. I'm currently a third year student at the
+                                <a href="https://sc.edu//" target="_blank">University of South Carolina</a> pursuing a degree in <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/academics/undergraduate_programs/computer_science/index.php" target="_blank">computer science</a> with a minor in political science. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.
                                 <br>
-                                <br> When I'm not on the computer, I enjoy snowboarding, swimming, and petting dogs.
+                                <br> When I'm not on the computer, I enjoy reading, running, and petting dogs.
                             </p>
                         </div>
                     </div>
@@ -839,12 +839,10 @@
                             <!-- <li><a id="pinterest" href="https://www.pinterest.com/brittanychiang/" target="_blank"><i class="fa fa-pinterest"></i></a></li> -->
                             <!-- Spotify Button -->
                             <li><a id="spotify" href="https://play.spotify.com/user/bchiang7" target="_blank"><i class="fa fa-spotify"></i></a></li>
-                            <!-- Codepen Button -->
-                            <li><a id="codepen" href="http://codepen.io/bchiang7/" target="_blank"><i class="fa fa-codepen"></i></a></li>
                             <!-- GitHub Button -->
-                            <li><a id="github" href="https://github.com/bchiang7" target="_blank"><i class="fa fa-github"></i></a></li>
+                            <li><a id="github" href="https://github.com/riyapatel135" target="_blank"><i class="fa fa-github"></i></a></li>
                             <!-- LinkedIn Button -->
-                            <li><a id="linkedin" href="https://www.linkedin.com/in/bchiang7" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a id="linkedin" href="https://www.linkedin.com/in/riya-patel-8992b0233/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                         <div class="page-scroll">
                             <a id="to-top" class="page-scroll" href="#page-top">
@@ -854,7 +852,7 @@
                         </div>
                         <div class="copyright">
                             <!-- please don't steal my stuff without permission -->
-                            <p><i class="fa fa-copyright"></i> Brittany Chiang 2016</p>
+                            <p><i class="fa fa-copyright"></i> Riya Patel 2024</p>
                         </div>
                     </div>
                 </div>
@@ -880,22 +878,6 @@
         //  });
         // });
         </script>
-        <!-- *********************************************
-         _   _              _   _                   _
-        | | | | ___ _   _  | |_| |__   ___ _ __ ___| |
-        | |_| |/ _ \ | | | | __| '_ \ / _ \ '__/ _ \ |
-        |  _  |  __/ |_| | | |_| | | |  __/ | |  __/_|
-        |_| |_|\___|\__, |  \__|_| |_|\___|_|  \___(_)
-                    |___/
-
-        Lookin' at the source code huh?
-        Be sure to drop me a line! I'd love to chat,
-        whether it's about code, design, dogs,
-        coffee, snowboarding, or anything in between.
-
-        - Brittany
-
-        ********************************************** -->
 </body>
 
 </html>
