--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 wp1">
                             <h2>A Little Bit About Me</h2>
-                            <img src="img/headshot1-square4.jpg" id="prof-pic" />
+                            <img src="img/headshot.jpg" id="prof-pic" />
                             <p>
                                 Hey! My name is Riya and I'm a web developer with a passion for front end development and design. I'm currently a third year student at the
                                 <a href="https://sc.edu//" target="_blank">University of South Carolina</a> pursuing a degree in <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/academics/undergraduate_programs/computer_science/index.php" target="_blank">computer science</a> with a minor in political science. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.
