--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
                         <h2>Get In Touch!</h2>
                         <p>Whether you have an idea for a project or just want to chat, feel free to shoot me an email!</p>
                         <p style="margin-top:40px;">
-                            <a id="email-button" href="mailto:brittany.chiang@gmail.com" target="_blank">Say Hello</a>
+                            <a id="email-button" href="mailto:riyapat135@gmail.com" target="_blank">Say Hello</a>
                         </p>
                     </div>
                 </div>
@@ -830,16 +830,10 @@
                         <!-- <h3>Other places you can find me</h3> -->
                         <ul class="list-inline social-buttons animated fadeIn">
                             <!-- Facebook Button -->
-                            <li><a id="facebook" href="https://www.facebook.com/brittany.chiang" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <!-- Twitter Button -->
-                            <li><a id="twitter" href="https://twitter.com/bchiang7" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                            <li><a id="facebook" href="https://www.facebook.com/profile.php?id=100068076638244" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <!-- Instagram Button -->
-                            <li><a id="instagram" href="https://instagram.com/bchiang7/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                            <!-- Pinterest Button -->
-                            <!-- <li><a id="pinterest" href="https://www.pinterest.com/brittanychiang/" target="_blank"><i class="fa fa-pinterest"></i></a></li> -->
-                            <!-- Spotify Button -->
-                            <li><a id="spotify" href="https://play.spotify.com/user/bchiang7" target="_blank"><i class="fa fa-spotify"></i></a></li>
-                            <!-- GitHub Button -->
+                            <li><a id="instagram" href="https://instagram.com/riyaaapatelll_/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                            <!-- Github Button -->
                             <li><a id="github" href="https://github.com/riyapatel135" target="_blank"><i class="fa fa-github"></i></a></li>
                             <!-- LinkedIn Button -->
                             <li><a id="linkedin" href="https://www.linkedin.com/in/riya-patel-8992b0233/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -851,7 +845,6 @@
                             <p id="to-top-copy">Beam me up, Scotty!</p>
                         </div>
                         <div class="copyright">
-                            <!-- please don't steal my stuff without permission -->
                             <p><i class="fa fa-copyright"></i> Riya Patel 2024</p>
                         </div>
                     </div>
