--- a/index.html
+++ b/index.html
@@ -840,9 +840,9 @@
                         </ul>
                         <div class="page-scroll">
                             <a id="to-top" class="page-scroll" href="#page-top">
-                                <img id="rocket" src="img/rocket12.png" />
+                                <img id="millenium" src="img/milleniumfalcon.png" />
                             </a>
-                            <p id="to-top-copy">Beam me up, Scotty!</p>
+                            <p id="to-top-copy">Return to the Jedi... uh, top of the page</p>
                         </div>
                         <div class="copyright">
                             <p><i class="fa fa-copyright"></i> Riya Patel 2024</p>
