--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head prefix="og: http://ogp.me/ns#">
-    <title>Riya Patel | Student</title>
+    <title>Riya Patel</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="Riya Patel, Riya, Patel, riyapatel135, student, front-end, web, website, computer, software, developer, engineer, designer" />
@@ -76,10 +76,10 @@
                             <h2>A Little Bit About Me</h2>
                             <img src="img/headshot.jpg" id="prof-pic" />
                             <p>
-                                Hey! My name is Riya and I'm a web developer with a passion for front end development and design. I'm currently a third year student at the
-                                <a href="https://sc.edu//" target="_blank">University of South Carolina</a> pursuing a degree in <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/academics/undergraduate_programs/computer_science/index.php" target="_blank">computer science</a> with a minor in political science. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences.
+                                Hey! My name is Riya, I'm a passionate individual who finds joy in coding and technology, while also exploring the world of politics. I'm currently a third year student at the
+                                <a href="https://sc.edu//" target="_blank">University of South Carolina</a> pursuing a degree in <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/academics/undergraduate_programs/computer_science/index.php" target="_blank">computer science</a> with a minor in political science. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences. 
                                 <br>
-                                <br> When I'm not on the computer, I enjoy reading, running, and petting dogs.
+                                <br> Outiside of academics, you'll often find me hitting the pavemnet for a refreshing run, reading, or listening to true crime podcasts and documentaries. 
                             </p>
                         </div>
                     </div>
@@ -99,8 +99,10 @@
                                 <div class="tldr-icon"><i class="fa fa-tree"></i></div>
                                 <h5>Snowboarder</h5>
                             </div>
-                            <div </div>
-                            </div>
+                            </div> </div>
+                            <div  
+                        </div>
+                    </div>
                         </div>
                     </div>
         </section>
@@ -139,7 +141,6 @@
                     <div class="col-md-12">
                         <div class="col-md-10 col-md-offset-1 text-center wp3">
                             <h2>Experience</h2>
-                            <p>I've been doing web development for about 3 years now, and I'm always eager to learn more in this fast paced industry.</p>
                         </div>
                         <!-- <div class="col-md-8 col-xs-8 skills">
                             <ul class="skills-bar-container">
