--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="intro-content">
                     <h1 class="animated fadeInDown delay-05s">Hi, I'm Riya</strong>
                     </h1>
-                    <p class="subtitle animated fadeInUp delay-05s">Student</p>
+                    <p class="subtitle animated fadeInUp delay-05s"></p>
                     <a class="fa fa-angle-down page-scroll" href="#about"></a>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                                 Hey! My name is Riya, I'm a passionate individual who finds joy in coding and technology, while also exploring the world of politics. I'm currently a third year student at the
                                 <a href="https://sc.edu//" target="_blank">University of South Carolina</a> pursuing a degree in <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/academics/undergraduate_programs/computer_science/index.php" target="_blank">computer science</a> with a minor in political science. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences. 
                                 <br>
-                                <br> Outiside of academics, you'll often find me hitting the pavemnet for a refreshing run, reading, or listening to true crime podcasts and documentaries. 
+                                <br> Outiside of academics, you'll often find me hitting the pavement for a refreshing run, reading, or listening to true crime podcasts and documentaries. 
                             </p>
                         </div>
                     </div>
