--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <div class="col-md-12">
                                 <h2>Check out my résumé!</h2>
                                 <div id="resume-button">
-                                    <a class="resume-btn wp4" href="resume2016.pdf" target="_blank">Grab A Copy</a>
+                                    <a class="resume-btn wp4" href="" target="_blank">Grab A Copy</a>
                                 </div>
                             </div>
                         </div>
