--- a/index.html
+++ b/index.html
@@ -172,7 +172,16 @@
                             </ul>
                         </div> -->
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
-                            <h3>Some technologies I've worked with:</h3>
+                            <h3>ADP Consultants. Inc.</h3>
+                        <p>
+                            Intern - Washington, DC | Jun 2023 - Aug 2023
+                        </p>
+                        <ul>
+                            <li>Assisted in conducting site inspections and quality control checks</li>
+		                    <li>Prepared and maintained detailed documentation, including reports and progress updates</li>
+		                    <li>Scheduling audit appointments for clients</li>
+	                    	<li>Perform walk-throughs with subcontractors and inspectors to ensure adherence to specifications</li>
+                        </ul>
                         </div>
                     </div>
                     <!-- /col-->
@@ -189,7 +198,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <h2>Check out my résumé!</h2>
+                                <h2>Check out my resume!</h2>
                                 <div id="resume-button">
                                     <a class="resume-btn wp4" href="" target="_blank">Grab A Copy</a>
                                 </div>
