--- a/index.html
+++ b/index.html
@@ -172,14 +172,13 @@
                             </ul>
                         </div> -->
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
-                            <h3>ADP Consultants. Inc.
-                            Intern - Washington, DC | Jun 2023 - Aug 2023</h3>
-                        <ul>
+                            <h3>ADP Consultants. Inc.</h3>
+                            <h3>Intern - Washington, DC | Jun 2023 - Aug 2023</h3>
                             <li>Assisted in conducting site inspections and quality control checks</li>
 		                    <li>Prepared and maintained detailed documentation, including reports and progress updates</li>
 		                    <li>Scheduling audit appointments for clients</li>
 	                    	<li>Perform walk-throughs with subcontractors and inspectors to ensure adherence to specifications</li>
-                        </ul>
+
                         </div>
                     </div>
                     <!-- /col-->
