--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
                             </ul>
                         </div> -->
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
-                            <h3>ADP Consultants. Inc.</h3>
-                            <h3>Intern - Washington, DC | Jun 2023 - Aug 2023</h3>
+                            <p>ADP Consultants. Inc.</p>
+                            <p>Intern - Washington, DC | Jun 2023 - Aug 2023</p>
                             <li>Assisted in conducting site inspections and quality control checks</li>
 		                    <li>Prepared and maintained detailed documentation, including reports and progress updates</li>
 		                    <li>Scheduling audit appointments for clients</li>
