--- a/index.html
+++ b/index.html
@@ -142,42 +142,15 @@
                         <div class="col-md-10 col-md-offset-1 text-center wp3">
                             <h2>Experience</h2>
                         </div>
-                        <!-- <div class="col-md-8 col-xs-8 skills">
-                            <ul class="skills-bar-container">
-                                <label>HTML5</label>
-                                <span class="percent" id="html-percent"></span>
-                                <li>
-                                    <span class="progressbar progressred wp3-1" id="progress-1"></span>
-                                </li>
-                                <label>CSS3 / Sass</label>
-                                <span class="percent" id="css-percent"></span>
-                                <li>
-                                    <span class="progressbar progressblue wp3-2" id="progress-2"></span>
-                                </li>
-                                <label>Javascript / jQuery</label>
-                                <span class="percent" id="javascript-percent"></span>
-                                <li>
-                                    <span class="progressbar progresspurple wp3-3" id="progress-3"></span>
-                                </li>
-                                <label>Java</label>
-                                <span class="percent" id="angular-percent"></span>
-                                <li>
-                                    <span class="progressbar progressgreen wp3-4" id="progress-4"></span>
-                                </li>
-                                <label>MEAN Stack</label>
-                                <span class="percent" id="php-percent"></span>
-                                <li>
-                                    <span class="progressbar progressorange wp3-5" id="progress-5"></span>
-                                </li>
-                            </ul>
-                        </div> -->
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
                             <p>ADP Consultants. Inc.</p>
                             <p>Intern - Washington, DC | Jun 2023 - Aug 2023</p>
-                            <li>Assisted in conducting site inspections and quality control checks</li>
-		                    <li>Prepared and maintained detailed documentation, including reports and progress updates</li>
-		                    <li>Scheduling audit appointments for clients</li>
-	                    	<li>Perform walk-throughs with subcontractors and inspectors to ensure adherence to specifications</li>
+                            <ul style="font-family: 'Lato', sans-serif; font-size: 16px;">
+                                <li>Assisted in conducting site inspections and quality control checks</li>
+		                        <li>Prepared and maintained detailed documentation, including reports and progress updates</li>
+		                        <li>Scheduling audit appointments for clients</li>
+	                    	    <li>Perform walk-throughs with subcontractors and inspectors to ensure adherence to specifications</li>
+                            </ul>
 
                         </div>
                     </div>
