--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                             <h2>Experience</h2>
                         </div>
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
-                            <p>ADP Consultants. Inc.</p>
-                            <p>Intern - Washington, DC | Jun 2023 - Aug 2023</p>
-                            <ul style="font-family: 'Lato', sans-serif; font-size: 16px;">
+                            <p style="margin-bottom: 10px;">ADP Consultants. Inc.</p>
+                            <p style="margin-bottom: 10px;">Intern - Washington, DC | Jun 2023 - Aug 2023</p>
+                            <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: normal;">
                                 <li>Assisted in conducting site inspections and quality control checks</li>
 		                        <li>Prepared and maintained detailed documentation, including reports and progress updates</li>
 		                        <li>Scheduling audit appointments for clients</li>
