--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
 		                        <li>Scheduling audit appointments for clients</li>
 	                    	    <li>Perform walk-throughs with subcontractors and inspectors to ensure adherence to specifications</li>
                             </ul>
+                            <h3 style="margin-bottom: 0px;">Burbee Place</h3>
+                            <h3 style="margin-bottom: 0px;">Childcare Worker - Lancaster, SC | Jun 2022 - Aug 2022</h3>
+                            <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
+                                <li>Oversee and administer group learning activities, encourage equal participation, and offer specialized attention based on parent and teacher recommendations</li>
+                                <li>Maintain eight-hour supervision of groups ranging between 20 and 50 children</li>
+                                <li>Provide a safe, healthy, nurturing environment to all children in the daycare and their families</li>
+                            </ul>
 
                         </div>
                     </div>
