--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <!-- /col-->
                 </div>
                 <!-- /row -->
-            </div>
+            <!--</div-->
             <!-- Container-->
         </section>
         <!-- /Section: Experience -->
