--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </section>
         <!-- Section: Experience -->
         <section id="experience">
-            <!--<div class="container"-->
+            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-10 col-md-offset-1 text-center wp3">
@@ -164,7 +164,7 @@
                     <!-- /col-->
                 </div>
                 <!-- /row -->
-            <!--</div-->
+            </div>
             <!-- Container-->
         </section>
         <!-- /Section: Experience -->
