--- a/index.html
+++ b/index.html
@@ -158,7 +158,15 @@
                                 <li>Maintain eight-hour supervision of groups ranging between 20 and 50 children</li>
                                 <li>Provide a safe, healthy, nurturing environment to all children in the daycare and their families</li>
                             </ul>
-
+                            <h3 style="margin-bottom: 0px;">Domino's Pizza</h3>
+                            <h3 style="margin-bottom: 0px;">Cashier - Lancaster, SC | Jul 2020 - Aug 2021</h3>
+                            <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
+                                <li>Recorded customer orders by answering phone or taking information in person</li>
+                                <li>Ensure fast and efficient production of quality pizzas and other food items</li>
+                                <li>Maintaining a clean work environment and adhering to all health and safety guidelines</li>
+                                <li>Maintaining high standards of customer service during high-volume, fast-paced operations</li>
+                                <li>Operated the drive-through window and sales register quickly and efficiently</li>
+                            </ul>
                         </div>
                     </div>
                     <!-- /col-->
