--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                                 <li>Maintaining high standards of customer service during high-volume, fast-paced operations</li>
                                 <li>Operated the drive-through window and sales register quickly and efficiently</li>
                             </ul>
+                            <h2>Volunteer Experience</h2>
                         </div>
                     </div>
                     <!-- /col-->
