--- a/index.html
+++ b/index.html
@@ -136,7 +136,6 @@
         </section>
         <!-- Section: Experience -->
         <section id="experience">
-            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-10 col-md-offset-1 text-center wp3">
@@ -167,14 +166,18 @@
                                 <li>Maintaining high standards of customer service during high-volume, fast-paced operations</li>
                                 <li>Operated the drive-through window and sales register quickly and efficiently</li>
                             </ul>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-10 col-md-offset-1 text-center wp3">
                             <h2>Volunteer Experience</h2>
+                        </div>
+                    </div>
+                 </div>
                         </div>
                     </div>
                     <!-- /col-->
                 </div>
                 <!-- /row -->
-            </div>
-            <!-- Container-->
         </section>
         <!-- /Section: Experience -->
         <!-- Section: Resume -->
