--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                             </ul>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="col-md-10 col-md-offset-1 text-center wp3">
+                        <div class="col-xs-12 col-sm-6 col-md-6 skills-section wp3 text-center">
                             <h2>Volunteer Experience</h2>
                         </div>
                     </div>
