--- a/index.html
+++ b/index.html
@@ -169,11 +169,14 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-xs-12 col-sm-6 col-md-6 skills-section wp3 text-center">
+                            <style>
+                                h2 {text-align: center;}
+                            </style>
                             <h2>Volunteer Experience</h2>
                         </div>
                     </div>
                  </div>
-                        </div>
+                </div>
                     </div>
                     <!-- /col-->
                 </div>
