--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@
                             <h2>Experience</h2>
                         </div>
                         <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
+                            <h3 style="margin-bottom: 0px;">CVS</h3>
+                            <h3 style="margin-bottom: 0px;">Shift Supervisor - Lancaster, SC | Oct 2023 - Present</h3>
+                            <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
+                                <li>Work effectively with store management and store crews</li>
+                                <li>Supervise the store's crew through assigning, directing and following up of all activities</li>
+                                <li>Effectively communicate information both to and from store management and crews</li>
+                                <li>Assist customers with their questions, problems and complaints</li>
+                            </ul>
                             <h3 style="margin-bottom: 0px;">ADP Consultants. Inc.</h3>
                             <h3 style="margin-bottom: 0px;">Intern - Washington, DC | Jun 2023 - Aug 2023</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
@@ -159,9 +167,30 @@
                             </style>
                             <h2>Volunteer Experience</h2>
                         </div>
-                    </div>
-                 </div>
+                        <div class="col-sm-offset-1 col-xs-12 col-sm-6 col-md-6 skills-section wp3">
+                            <h2 style="margin-bottom: 0px;">BAPS Shri Swaminarayan Mandir</h2>
+                            <h2 style="margin-bottom: 0px;">Audio Visual Team Member, Youth Group Leader - Charlotte, NC | Apr 2018 - Present</h2>
+                            <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
+                                <li>Set up all audio and visual equipment for large scheduled events and regular Sunday meetings. This includes: projectors, microphones, speakers, amplifiers, audio sound mixer control panel, and displays</li>
+                                <li>Set up lighting shows with multiples lasers and video screens</li>
+                                <li>Conduct training regarding proper usage and operation of AV equipment</li>
+                                <li>Direct Weekly youth meetings, special group events and overnight excursions</li>
+                                <li>Work with temple leadership, parents, and volunteers to establish clear goals and guidelines for temple youth</li>
+                            </ul>
+                            <h2 style="margin-bottom: 0px;">Medical Univerisity of South Carolina</h2>
+                            <h2 style="margin-bottom: 0px;">Volunteer - Lancaster, SC | Jul 2019 - Aug 2019</h2>
+                            <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
+                                <li>Organized files of terminated employees</li>
+                                <li>Made frequent rounds in assigned departments to assess patients' needs</li>
+                                <li>Escorted patients, families, and visitors to their required destinations</li>
+                                <li>Aided nurses in moving patients and providing supplies</li>
+                                <li>Provided limited direct patient care</li>
+                            </ul>
+
+                    </div
                 </div>
+            </div>
+
                     </div>
                     <!-- /col-->
                 </div>
