--- a/index.html
+++ b/index.html
@@ -102,18 +102,17 @@
                         <div class="col-md-4 wp2">
                             <div class="icon"><i class="fa fa-laptop"></i></div>
                             <h3>Design</h3>
-                            <p>Design isn't just what a product looks like and feels like on the outside. Design encompasses the internal functionality of a product as well as the overall user experience. I strive to design interfaces and experiences that people can enjoy on all digital mediums.
-                            </p>
+                            <p>My interests lie in sculpting visually captivating and user-centric experiences, employing my creativity and proficiency in tools like Adobe Creative Suite to manifest ideas into reality.</p>
                         </div>
                         <div class="col-md-4 wp2 delay-025s">
                             <div class="icon"><i class="fa fa-code"></i></div>
                             <h3>Development</h3>
-                            <p>With a strong foundation in computer science, I'm passionate about web design and development, and interested in mobile app development. As I grow as a developer, I hope to write clean, readable code that can be used by others and leveraged to create beautiful software.</p>
+                            <p>My passions lie in creating dynamic websites and applications, utilizing my proficiency in languages such as HTML, CSS, JavaScript, and Python to innovate digital solutions.</p>
                         </div>
                         <div class="col-md-4 wp2 delay-05s">
                             <div class="icon"><i class="fa fa-lightbulb-o"></i></div>
                             <h3>Involvement</h3>
-                            <p>At Northeastern, I'm currently the web chair for <a href="http://nuwit.ccs.neu.edu" target="_blank">nuWiT</a> (NU Women in Tech) as well as a Teaching Assistant for the undergrad HCI course. Previously, I've been involved with the club water polo team, the resident student association, and the ski and snowboard club.</p>
+                            <p>I am deeply engaged in campus life, from organizing student-led initiatives to volunteering in local outreach programs, aiming to make a meaningful impact while honing my skills and expanding my network within the collegiate community.</p>
                         </div>
                     </div>
                 </div>
