--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         <div class="col-md-4 wp2 delay-025s">
                             <div class="icon"><i class="fa fa-code"></i></div>
                             <h3>Development</h3>
-                            <p>My passions lie in creating dynamic websites and applications, utilizing my proficiency in languages such as HTML, CSS, JavaScript, and Python to innovate digital solutions.</p>
+                            <p>My passion is to creating dynamic websites and applications, utilizing my proficiency in languages such as HTML, CSS, JavaScript, and Python to innovate digital solutions.</p>
                         </div>
                         <div class="col-md-4 wp2 delay-05s">
                             <div class="icon"><i class="fa fa-lightbulb-o"></i></div>
