--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="author" content="Riya Patel" />
     <meta name="description" content="Web developer, UX Enthusiast, and everything in between." />
     <meta property="og:description" content="Web developer, UX Enthusiast, and everything in between." />
-    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://brittanychiang.com/img/social-image.png" />
+    <!--<meta prefix="og: http://ogp.me/ns#" property="og:image" content="http://brittanychiang.com/img/social-image.png" /> -->
     <meta property="og:image:type" content="image/png" />
     <meta property="og:title" content="Riya Patel's Personal Website" />
-    <meta property="og:url" content="http://brittanychiang.com/" />
+    <!--<meta property="og:url" content="http://brittanychiang.com/" /> -->
     <meta property="og:type" content="website" />
     <link rel="shortcut icon" href="img/logo-transparent-00009C.png">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
