--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         </section>
         <!-- Section: Experience -->
         <section id="experience">
+            <div class="text-center"></div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-10 col-md-offset-1 text-center wp3">
