--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </section>
         <!-- Section: Experience -->
         <section id="experience">
-            <div class="text-center"></div>
+            <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-10 col-md-offset-1 text-center wp3">
@@ -177,10 +177,17 @@
                                 <li>Aided nurses in moving patients and providing supplies</li>
                                 <li>Provided limited direct patient care</li>
                             </ul>
-
+                        <div class="col-xs-12 col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-3 employment wp3">
+                            <div class="text-center places-worked">
+                                <h3>Some technologies I've worked with</h3>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/html.png" id="html"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/css.png" id="css"></div>
+                            </div>
+                        </div>
                     </div
                 </div>
             </div>
+        </div>
 
                     </div>
                     <!-- /col-->
