--- a/index.html
+++ b/index.html
@@ -180,12 +180,8 @@
                         <div class="col-xs-12 col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-3 employment wp3">
                             <div class="text-center places-worked">
                                 <h3>Some technologies I've worked with:</h3>
-                                <a href="http://www.mullenloweus.com/" target="_blank">
-                                    <img id="mullen-logo" src="img/mullen-octopus.png" alt="Mullen" />
-                                </a>
-                                <a href="http://www.ccs.neu.edu/" target="_blank">
-                                    <img id="nu-logo" src="img/nu-logo.png" alt="Northeastern" />
-                                </a>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/html.png" id="html"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/css.png" id="css"></div>
                             </div>
                         </div>
                     </div>
