--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
                                 <h3>Some technologies I've worked with:</h3>
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/html.png" id="html"></div>
                                 <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/css.png" id="css"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/js.png" id="js"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/java.png"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/python.png" id="python"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/github.png"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/photoshop.png"></div>
+                                <div class="col-xs-3 col-sm-2 col-md-2 skill-icon"><img class="img-responsive" src="img/skills/indesign.png"></div>
                             </div>
                         </div>
                     </div>
