--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 <div class="skill-icon"><img class="img-responsive" src="img/skills/python.png" id="python"></div>
                                 <div class="skill-icon"><img class="img-responsive" src="img/skills/github.png"></div>
                                 <div class="skill-icon"><img class="img-responsive" src="img/skills/photoshop.png"></div>
-                                <div class="kill-icon"><img class="img-responsive" src="img/skills/indesign.png"></div>
+                                <div class="skill-icon"><img class="img-responsive" src="img/skills/indesign.png"></div>
                             </div>
                         </div>
                     </div>
