--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             </ul>
                         </div>
                         <div class="col-xs-12 col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-3 employment wp3">
-                            <div class="text-center places-worked">
+                            <div class="row">
                                 <h3>Some technologies I've worked with:</h3>
                                 <div class="skill-icon"><img class="img-responsive" src="img/skills/html.png" id="html"></div>
                                 <div class="skill-icon"><img class="img-responsive" src="img/skills/css.png" id="css"></div>
