--- a/index.html
+++ b/index.html
@@ -180,14 +180,30 @@
                         <div class="col-xs-12 col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-3 employment wp3">
                             <div class="row">
                                 <h3>Some technologies I've worked with:</h3>
-                                <div class="skill-icon"><img class="img-responsive" src="img/skills/html.png" id="html"></div>
-                                <div class="skill-icon"><img class="img-responsive" src="img/skills/css.png" id="css"></div>
-                                <div class="skill-icon"><img class="img-responsive" src="img/skills/js.png" id="js"></div>
-                                <div class="skill-icon"><img class="img-responsive" src="img/skills/java.png"></div>
-                                <div class="skill-icon"><img class="img-responsive" src="img/skills/python.png" id="python"></div>
-                                <div class="skill-icon"><img class="img-responsive" src="img/skills/github.png"></div>
-                                <div class="skill-icon"><img class="img-responsive" src="img/skills/photoshop.png"></div>
-                                <div class="skill-icon"><img class="img-responsive" src="img/skills/indesign.png"></div>
+                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                    <img id="mullen-logo" src="img/skills/html.png" alt="HTML" />
+                                </a>
+                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                    <img id="nu-logo" src="img/skills/css.png" alt="CSS" />
+                                </a>
+                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                    <img id="nu-logo" src="img/skills/js.png" alt="JS" />
+                                </a>
+                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                    <img id="nu-logo" src="img/skills/java.png" alt="Java" />
+                                </a>
+                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                    <img id="nu-logo" src="img/skills/python.png" alt="Python" />
+                                </a>
+                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                    <img id="nu-logo" src="img/skills/github.png" alt="GitHub" />
+                                </a>
+                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                    <img id="nu-logo" src="img/skills/photoshop.png" alt="Photoshop" />
+                                </a>
+                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                    <img id="nu-logo" src="img/skills/indesign.png" alt="Indesign" />
+                                </a>
                             </div>
                         </div>
                     </div>
