--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <div class="row">
                                 <h3>Some technologies I've worked with:</h3>
                                 <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
-                                    <img id="mullen-logo" src="img/skills/html.png" alt="HTML" />
+                                    <img id="nu-logo" src="img/skills/html.png" alt="HTML" />
                                 </a>
                                 <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
                                     <img id="nu-logo" src="img/skills/css.png" alt="CSS" />
