--- a/index.html
+++ b/index.html
@@ -241,8 +241,22 @@
                     <h2 class="section-heading">What I've Done</h2>
                     <h5 class="coming-soon">(more coming soon)</h5>
                 </div>
+                <div class="row portfolio-row">
+                    <div class="portfolio-item-wrapper wp5">
+                        <div class="portfolio-item" data-toggle="modal" href="#feedbackLoopModal">
+                            <div class="portfolio-overlay"></div>
+                            <div class="links">
+                                <a class="image-link"><i class="fa fa-search-plus"></i></a>
+                                <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
+                            </div>
+                            <img src="img/feedback-loop.png" alt="image">
+                            <div class="portfolio-info">
+                                <h3>Feedback Loop</h3>
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
 
         </section>
         <!--************************** PORTFOLIO MODALS **************************-->
@@ -285,7 +299,7 @@
                         <Br>
                         <p class="modal-description"><strong>Note:</strong> For an optimal experience, use chrome with your sound on</p>
                         <p class="modal-description"><strong>Warning:</strong> Very resource heavy &mdash; efficiency &amp; optimization was definitely not a concern for this project.</p>
-                        <p class="visit"><a href="http://brittanychiang.com/feedback-loop/" target="_blank" id="visit-btn">Visit Site</a> or <a href="https://github.com/bchiang7/feedback-loop" target="_blank" id="visit-btn">View Source</a></p>
+                        <p class="visit"><a href="https://github.com/nwardy/tracerBot" target="_blank" id="visit-btn">View Source</a></p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
