--- a/index.html
+++ b/index.html
@@ -243,13 +243,13 @@
                 </div>
                 <div class="row portfolio-row">
                     <div class="portfolio-item-wrapper wp5">
-                        <div class="portfolio-item" data-toggle="modal" href="#feedbackLoopModal">
+                        <div class="portfolio-item" data-toggle="modal" href="#Tracerbot">
                             <div class="portfolio-overlay"></div>
                             <div class="links">
                                 <a class="image-link"><i class="fa fa-search-plus"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/feedback-loop.png" alt="image">
+                            <img src="img/tracerbot.png" alt="image">
                             <div class="portfolio-info">
                                 <h3>Feedback Loop</h3>
                             </div>
@@ -283,17 +283,17 @@
             </div>
         </div>
         <!-- Feedback Loop MODAL -->
-        <div class="modal fade" id="feedbackLoopModal" tabindex="-1" role="dialog" aria-labelledby="fontipsumsModal" aria-hidden="true">
+        <div class="modal fade" id="Tracerbot" tabindex="-1" role="dialog" aria-labelledby="fontipsumsModal" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title">Feedback Loop</h4>
-                        <h6 class="modal-title-description">Final Project</h6>
+                        <h4 class="modal-title">Tracerbot</h4>
+                        <h6 class="modal-title-description">Project</h6>
                     </div>
                     <div class="modal-body">
                         <p>
-                            <img class="img-responsive img-centered" src="img/feedback-loop.png" alt="">
+                            <img class="img-responsive img-centered" src="img/tracerbot.png" alt="">
                         </p>
                         <p class="modal-description">This site was my final project for 5D Foundations: Experience and Drawing. Dubbed "The Emotion Machine", the goal for the project was to use HTML and CSS to create a website which elicits an emotion from the user's interaction with it or engages its user with a particular sort of experience in mind.</p>
                         <Br>
