--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                             </div>
                             <img src="img/tracerbot.png" alt="image">
                             <div class="portfolio-info">
-                                <h3>Feedback Loop</h3>
+                                <h3>Tracerbot</h3>
                             </div>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                 </div>
             </div>
         </div>
-        <!-- Feedback Loop MODAL -->
+        <!-- Tracerbot MODAL -->
         <div class="modal fade" id="Tracerbot" tabindex="-1" role="dialog" aria-labelledby="fontipsumsModal" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
