--- a/index.html
+++ b/index.html
@@ -189,19 +189,19 @@
                                 <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
                                     <img id="nu-logo" src="img/skills/js.png" alt="JS" />
                                 </a>
-                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                <a href="https://www.java.com/en/" target="_blank">
                                     <img id="nu-logo" src="img/skills/java.png" alt="Java" />
                                 </a>
-                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                <a href="https://www.python.org/" target="_blank">
                                     <img id="nu-logo" src="img/skills/python.png" alt="Python" />
                                 </a>
-                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                <a href="https://github.com/" target="_blank">
                                     <img id="nu-logo" src="img/skills/github.png" alt="GitHub" />
                                 </a>
-                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                <a href="https://www.adobe.com/products/photoshop.html" target="_blank">
                                     <img id="nu-logo" src="img/skills/photoshop.png" alt="Photoshop" />
                                 </a>
-                                <a href="https://riyapatel135.github.io/personalportfolio/" target="_blank">
+                                <a href="https://www.adobe.com/products/indesign.html" target="_blank">
                                     <img id="nu-logo" src="img/skills/indesign.png" alt="Indesign" />
                                 </a>
                             </div>
