--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 Hey! My name is Riya, I'm a passionate individual who finds joy in coding and technology, while also exploring the world of politics. I'm currently a student at the
                                 <a href="https://sc.edu//" target="_blank">University of South Carolina, Lancaster</a> pursuing a degree in <a href="https://sc.edu/study/colleges_schools/engineering_and_computing/academics/undergraduate_programs/computer_science/index.php" target="_blank">computer science</a> with a minor in political science. I aspire toward a career that will allow me to channel my creativity through crafting beautiful software and engaging experiences. 
                                 <br>
-                                <br> Outiside of academics, you'll often find me hitting the pavement for a refreshing run, reading, or listening to true crime podcasts and documentaries. 
+                                <br> Outside of academics, you'll often find me hitting the pavement for a refreshing run, reading, or listening to true crime podcasts and documentaries. 
                             </p>
                         </div>
                     </div>
