--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                 <a class="image-link"><i class="fa fa-search-plus"></i></a>
                                 <!-- <a href="https://google.com" target="_blank"><i class="fa fa-link"></i></a> -->
                             </div>
-                            <img src="img/tracerbot.png" alt="image">
+                            <img src="img/tracerbot1.png" alt="image">
                             <div class="portfolio-info">
                                 <h3>Tracerbot</h3>
                             </div>
