--- a/index.html
+++ b/index.html
@@ -295,10 +295,13 @@
                         <p>
                             <img class="img-responsive img-centered" src="img/tracerbot.png" alt="">
                         </p>
-                        <p class="modal-description">This site was my final project for 5D Foundations: Experience and Drawing. Dubbed "The Emotion Machine", the goal for the project was to use HTML and CSS to create a website which elicits an emotion from the user's interaction with it or engages its user with a particular sort of experience in mind.</p>
+                        <p class="modal-description">The collaborative project aims to create an innovative autonomous robot with the capability to detect humans and engage them in a friendly Nerf battle. This robot integrates cutting-edge technology in robotics, computer vision, and remote control systems to achieve its objectives.</p>
                         <Br>
-                        <p class="modal-description"><strong>Note:</strong> For an optimal experience, use chrome with your sound on</p>
-                        <p class="modal-description"><strong>Warning:</strong> Very resource heavy &mdash; efficiency &amp; optimization was definitely not a concern for this project.</p>
+                        <p class="modal-description"><strong>Autonomous Detection System:</strong> The robot is equipped with an advanced camera for detecting human presence within its surroundings. Using sophisticated computer vision algorithms, the robot can accurately identify and track human targets in real-time.</p>
+                        <p class="modal-description"><strong>Nerf Bullet Deployment Mechanism:</strong> Once a human target is detected, the robot activates its Nerf bullet deployment mechanism. This mechanism could involve a motorized system that loads and fires Nerf bullets from a turret mounted on the robot's body. Precision aiming is achieved through a combination of the robot's detection system and motorized mechanisms. Safety is paramount in the design of the robot. The Nerf bullets used are soft and non-toxic, ensuring that the interaction remains safe and enjoyable.</p>
+                        <p class="modal-description"><strong>Navigation and Remote Control Capabiltiies:</strong> In remote control mode, users have the ability to take direct control of the robot's movement and firing actions via a dedicated controller.</p>
+                        <p class="modal-description"><strong>Educational and Recreational Applications:</strong> Beyond its entertainment value, the robot serves as a valuable educational tool for teaching robotics, computer vision, and artificial intelligence concepts. It can be used in schools, robotics clubs, and STEM programs to engage students in hands-on learning experiences.</p>
+
                         <p class="visit"><a href="https://github.com/nwardy/tracerBot" target="_blank" id="visit-btn">View Source</a></p>
                     </div>
                     <div class="modal-footer">
