--- a/index.html
+++ b/index.html
@@ -137,10 +137,11 @@
                             <h3 style="margin-bottom: 0px;">ADP Consultants. Inc.</h3>
                             <h3 style="margin-bottom: 0px;">Intern - Washington, DC | Jun 2023 - Aug 2023</h3>
                             <ul style="font-family: 'Lato', sans-serif; font-size: 16px; font-weight: 300; min-width: auto;">
-                                <li>Assisted in conducting site inspections and quality control checks</li>
-		                        <li>Prepared and maintained detailed documentation, including reports and progress updates</li>
+                                <li>Assisted in conducting site inspections and quality control checks for over 1.8-million-dollar projects for low-income housing</li>
+		                        <li>Prepared and maintained detailed documentation, including reports and progress updates of different site locations</li>
 		                        <li>Scheduling audit appointments for clients</li>
-	                    	    <li>Perform walk-throughs with subcontractors and inspectors to ensure adherence to specifications</li>
+	                    	    <li>Perform walk-throughs with subcontractors and inspectors to ensure adherence to specifications according to the law and the state</li>
+                                <li>Work on AutoCad 2-D prints of ongoing site projects</li>
                             </ul>
                             <h3 style="margin-bottom: 0px;">Burbee Place</h3>
                             <h3 style="margin-bottom: 0px;">Childcare Worker - Lancaster, SC | Jun 2022 - Aug 2022</h3>
