--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </div>
         <!-- Tracerbot MODAL -->
         <div class="modal fade" id="Tracerbot" tabindex="-1" role="dialog" aria-labelledby="fontipsumsModal" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
